[gd_scene load_steps=14 format=3 uid="uid://dgyk7ea4n7744"]

[ext_resource type="FontFile" uid="uid://c5ugy4bgmo7mu" path="res://Font/ThaleahFat.ttf" id="1_3cdec"]
[ext_resource type="Texture2D" uid="uid://by5qeke8f7evo" path="res://Sprite/ShuYiShu/Clouds 2/1.png" id="1_brlw2"]
[ext_resource type="PackedScene" uid="uid://cku255ljrdcj3" path="res://Scences/timer.tscn" id="1_ew4ay"]
[ext_resource type="Texture2D" uid="uid://ctekaj7ob6l5n" path="res://Sprite/ShuYiShu/Clouds 2/2.png" id="2_8r356"]
[ext_resource type="Texture2D" uid="uid://ctie17kib7yao" path="res://Sprite/ShuYiShu/Clouds 2/3.png" id="3_v33p6"]
[ext_resource type="Script" path="res://Script/Shu_Yi_Shu.gd" id="5_0mtfm"]
[ext_resource type="PackedScene" uid="uid://bgs4ryqa52mgk" path="res://Scences/backbutton.tscn" id="5_cpgwp"]
[ext_resource type="Texture2D" uid="uid://bpsf54lv4bjju" path="res://Sprite/ShunQiZiRan/Border All 1.png" id="6_ut1y6"]
[ext_resource type="Texture2D" uid="uid://brtkdyjasui2q" path="res://Sprite/ShuYiShu/UI_Flat_Frame02a.png" id="7_ravr2"]
[ext_resource type="Texture2D" uid="uid://ctjh07tpp2bxs" path="res://Sprite/ShuYiShu/UI_Flat_FrameMarker01a.png" id="8_hvpve"]
[ext_resource type="PackedScene" uid="uid://bpji8grjpjpiw" path="res://Scences/end_image.tscn" id="9_la01e"]
[ext_resource type="PackedScene" uid="uid://rrudykx7mr6p" path="res://Scences/round_counter.tscn" id="42_1k8gl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_782v1"]
atlas = ExtResource("6_ut1y6")
region = Rect2(576, 320, 64, 64)

[node name="Shu_Yi_Shu" type="Node2D"]
script = ExtResource("5_0mtfm")

[node name="Background" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enabled = true

[node name="Sprite2D" type="TextureRect" parent="Background"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_brlw2")

[node name="Sprite2D2" type="TextureRect" parent="Background"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8r356")

[node name="Sprite2D3" type="TextureRect" parent="Background"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_v33p6")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI/Control"]
texture_filter = 1
layout_mode = 0
offset_top = 429.0
offset_right = 539.0
offset_bottom = 849.0
texture = ExtResource("7_ravr2")

[node name="TextureRect2" type="TextureRect" parent="UI/Control"]
texture_filter = 1
layout_mode = 0
offset_top = 426.0
offset_right = 537.0
offset_bottom = 699.0
texture = ExtResource("8_hvpve")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control"]
z_index = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -164.0
offset_top = -466.0
offset_right = 164.0
offset_bottom = -338.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(164, 64)
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TextureButton" type="TextureButton" parent="UI/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_782v1")

[node name="Sprite2D" type="Sprite2D" parent="UI/Control/HBoxContainer/TextureButton"]
position = Vector2(31, 32)

[node name="TextureButton2" type="TextureButton" parent="UI/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_782v1")

[node name="Sprite2D" type="Sprite2D" parent="UI/Control/HBoxContainer/TextureButton2"]
position = Vector2(31, 32)

[node name="TextureButton3" type="TextureButton" parent="UI/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_782v1")

[node name="Sprite2D" type="Sprite2D" parent="UI/Control/HBoxContainer/TextureButton3"]
position = Vector2(31, 32)

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Control"]
z_index = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -164.0
offset_top = -594.0
offset_right = 164.0
offset_bottom = -466.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(164, 64)
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TextureButton" type="TextureButton" parent="UI/Control/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_782v1")

[node name="Sprite2D" type="Sprite2D" parent="UI/Control/HBoxContainer2/TextureButton"]
position = Vector2(31, 32)

[node name="TextureButton2" type="TextureButton" parent="UI/Control/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_782v1")

[node name="Sprite2D" type="Sprite2D" parent="UI/Control/HBoxContainer2/TextureButton2"]
position = Vector2(31, 32)

[node name="TextureButton3" type="TextureButton" parent="UI/Control/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_782v1")

[node name="Sprite2D" type="Sprite2D" parent="UI/Control/HBoxContainer2/TextureButton3"]
position = Vector2(31, 32)

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/Control"]
z_index = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -164.0
offset_top = -722.0
offset_right = 164.0
offset_bottom = -594.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(164, 64)
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TextureButton" type="TextureButton" parent="UI/Control/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_782v1")

[node name="Sprite2D" type="Sprite2D" parent="UI/Control/HBoxContainer3/TextureButton"]
position = Vector2(31, 32)

[node name="TextureButton2" type="TextureButton" parent="UI/Control/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_782v1")

[node name="Sprite2D" type="Sprite2D" parent="UI/Control/HBoxContainer3/TextureButton2"]
position = Vector2(31, 32)

[node name="TextureButton3" type="TextureButton" parent="UI/Control/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_782v1")

[node name="Sprite2D" type="Sprite2D" parent="UI/Control/HBoxContainer3/TextureButton3"]
position = Vector2(31, 32)

[node name="TimerLabel" parent="UI" instance=ExtResource("1_ew4ay")]
offset_left = 16.0
offset_top = 56.0
offset_right = 112.0
offset_bottom = 88.0

[node name="RoundCounter" parent="UI" instance=ExtResource("42_1k8gl")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -204.0
offset_top = 60.0
offset_right = -172.0
offset_bottom = 68.0
grow_horizontal = 0

[node name="Number" type="Label" parent="UI"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -337.0
offset_right = 79.5
offset_bottom = -219.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.383378, 0.575989, 1, 1)
theme_override_fonts/font = ExtResource("1_3cdec")
theme_override_font_sizes/font_size = 128
horizontal_alignment = 1
vertical_alignment = 1

[node name="Backbutton" parent="UI" instance=ExtResource("5_cpgwp")]
offset_top = 24.0
offset_bottom = 36.0

[node name="EndImage" parent="." instance=ExtResource("9_la01e")]

[node name="Lose" parent="EndImage" index="0"]
offset_left = -237.0
offset_top = -102.0
offset_right = 237.0
offset_bottom = 102.0

[node name="Win" parent="EndImage" index="1"]
offset_left = -237.0
offset_top = -102.0
offset_right = 237.0
offset_bottom = 102.0

[connection signal="pressed" from="UI/Control/HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="UI/Control/HBoxContainer/TextureButton2" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="UI/Control/HBoxContainer/TextureButton3" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="UI/Control/HBoxContainer2/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="UI/Control/HBoxContainer2/TextureButton2" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="UI/Control/HBoxContainer2/TextureButton3" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="UI/Control/HBoxContainer3/TextureButton2" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="UI/Control/HBoxContainer3/TextureButton3" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="EndImage/Lose/TextureButton" to="." method="_on_lose_button_pressed"]
[connection signal="pressed" from="EndImage/Win/TextureButton" to="." method="_on_win_button_pressed"]

[editable path="EndImage"]
